--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     background-color: #121212;
     color: gray;
     min-height: 100vh;
-    margin: 0;
+    margin: 0px;
     padding: 20px;
 }
 
@@ -21,7 +21,7 @@ padding: 20px;
   h1 ,h3 {
     letter-spacing: 0.1em;
     color:gray;
-    position: centre;
+    text-align: centre;
 }
 
 .typing {
@@ -85,7 +85,7 @@ color: bisque;
 }
 .header_ul {
     list-style-type: none;
-    padding: 0;
+    padding: 0px;
     display: flex;
     justify-content: space-evenly;
     gap: 1rem;
@@ -150,9 +150,9 @@ label{
 }
 input,textarea{
     width: 100%;
-    padding: 0PX;
-    border: 1PX solid #444;
-    border-radius: 4px;
+    padding: 0px;
+    border: 1px width #444;
+    solid: 4px;
     background-color: #2a2a2a;
     color: #fff;
 }
@@ -172,7 +172,7 @@ footer{
     padding: 20px;
     position: relative;
     border-bottom: 0;
-    width: 100;
+    width: 100%;
 }
 
 .social-links{
@@ -193,3 +193,4 @@ footer{
 }
 .social-links a:hover{
     color: #ffcc00;
+
